<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:src="@mipmap/icon_name"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:background="@null"
            android:hint="@string/str_enterprise"
            android:inputType="text"
            android:textColorHint="#bfbfbf"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="16sp"/>


    </LinearLayout>

    <include layout="@layout/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:src="@mipmap/icon_phone"/>

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="339dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:background="@null"
            android:hint="@string/str_phone"
            android:inputType="phone"
            android:textColorHint="#bfbfbf"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="16sp"/>

    </LinearLayout>

    <include layout="@layout/divider"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:src="@mipmap/icon_verify"/>

        <EditText
            android:id="@+id/et_verify"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/str_verify"
            android:inputType="number"
            android:textColorHint="#bfbfbf"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_get_verify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/str_get_verify"
            android:textColor="@color/tv_bg"/>

    </LinearLayout>

    <include layout="@layout/divider"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/str_pwd"
            android:inputType="textPassword"
            android:textColorHint="#bfbfbf"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:src="@mipmap/icon_pwd"/>

        <CheckBox
            android:id="@+id/chb_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:background="@null"
            android:button="@drawable/chb_pwd_bg"
            android:focusable="true"/>

    </LinearLayout>

    <include layout="@layout/divider"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_selector"
        android:text="@string/str_register"
        android:textColor="#fff"
        android:textSize="18sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_have_username"
            android:textColor="#bfbfbf"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/str_login_immediately"
            android:textColor="@color/tv_bg"
            android:textSize="14sp"/>
    </LinearLayout>


</LinearLayout>